# cifar-pytorch

./: .gitignore  README.md  pyproject.toml  train.py
src/cifar/: __init__.py  data.py  engine.py  models.py
tests/: test_cifar.py  test_train_cli.py
