[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cifar-pytorch"
version = "1.0.0"
description = "CIFAR-10 image classifier in PyTorch: a from-scratch CNN vs transfer learning."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "smafnan", email = "smafnan5@gmail.com" }]
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
